[gd_scene load_steps=8 format=3 uid="uid://bh34g0wrrgpem"]

[ext_resource type="Script" path="res://scripts/Secret.gd" id="1_80b8b"]
[ext_resource type="AudioStream" uid="uid://dnki6560hrjhf" path="res://assets/Audio/pickupSecret.wav" id="2_qwfdu"]
[ext_resource type="Texture2D" uid="uid://df8rjhs1ye5rs" path="res://assets/sprites/TileMap4.png" id="3_5hnsf"]

[sub_resource type="Animation" id="Animation_wf2hg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wdu3h"]
resource_name = "Sway"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.5, 2),
"transitions": PackedFloat32Array(0.31864, 3.86374, 0.732042),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rp3il"]
_data = {
"RESET": SubResource("Animation_wf2hg"),
"Sway": SubResource("Animation_wdu3h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma864"]
size = Vector2(8, 10)

[node name="Secret" type="Area2D"]
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("1_80b8b")

[node name="PickupSecretSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_qwfdu")

[node name="Sway" type="Node2D" parent="."]

[node name="Visual1" type="Sprite2D" parent="Sway"]
visible = false
texture = ExtResource("3_5hnsf")
region_enabled = true
region_rect = Rect2(147, 146, 11, 12)

[node name="Visual2" type="Sprite2D" parent="Sway"]
visible = false
texture = ExtResource("3_5hnsf")
region_enabled = true
region_rect = Rect2(133, 134, 10, 9)

[node name="Visual3" type="Sprite2D" parent="Sway"]
visible = false
texture = ExtResource("3_5hnsf")
region_enabled = true
region_rect = Rect2(130, 129, 13, 5)

[node name="Visual4" type="Sprite2D" parent="Sway"]
visible = false
texture = ExtResource("3_5hnsf")
region_enabled = true
region_rect = Rect2(130, 146, 12, 12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sway"]
libraries = {
"": SubResource("AnimationLibrary_rp3il")
}
autoplay = "Sway"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ma864")
